fix: remove global CSS reset that was overriding Tailwind spacing utilities

--- a/apps/extension/entrypoints/popup/style.css
+++ b/apps/extension/entrypoints/popup/style.css
@@ -20,11 +20,6 @@
   --mesh-4: #0ea5e9;
 }
 
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
 
 body {
   width: 360px;
